--- a/app/usuario/view/view.html
+++ b/app/usuario/view/view.html
@@ -1,7 +1,7 @@
 <ng-include src="'./app/menu.html'"></ng-include>
 <div class="container">
     <div class="row">
-        <h1 class="md-4">Vista de producto</h1>
+        <h1 class="md-4">Vista de Usuario</h1>
         <table class="table table-bordered table-hover" ng-show="!fallo">
             <tr>
                 <th> Campo </th>
@@ -12,33 +12,37 @@
                 <td> {{id}} </td>
             </tr>
             <tr>
-                <th> Descripcion: </th>
-                <td> {{descripcion}} </td>
+                <th> Dni: </th>
+                <td> {{dni}} </td>
             </tr>
             <tr>
-                <th> Codigo: </th>
-                <td> {{codigo}} </td>
+                <th> Nombre: </th>
+                <td> {{nombre}} </td>
             </tr>
             <tr>
-                <th> Existencias: </th>
-                <td> {{existencias}} </td>
+                <th> Primer apellido: </th>
+                <td> {{apellido1}} </td>
             </tr>
             <tr>
-                <th> Precio: </th>
-                <td> {{precio}} </td>
+                <th> Segundo apellido: </th>
+                <td> {{apellido2}} </td>
             </tr>
             <tr>
-                <th> Tipo producto: </th>
-                <td> {{tipo_producto_obj.descripcion}} </td>
+                <th> Nombre de Usuario: </th>
+                <td> {{login}} </td>
             </tr> 
             <tr>
-                <th> Imagen: </th>
-                <td> {{imagen}} </td>
+                <th> Email: </th>
+                <td> {{email}} </td>
             </tr> 
+            <tr>
+                    <th>Tipo de Usuario</th>
+                    <td> {{tipo_usuario_obj.descripcion}} </td>
+                </tr> 
         </table>
         <div class="col">
             <div class="float-right">
-                <a type="button" class="btn btn-primary" href="#!/producto/edit/{{id}}" ng-show="authStatus==200">Editar</a>
+                <a type="button" class="btn btn-primary" href="#!/usuario/edit/{{id}}" ng-show="authStatus==200">Editar</a>
                 <button type="button" class="btn btn-outline-dark" ng-click="volver()">Volver</button>
             </div>
         </div>
