--- a/app/compra/view/view.html
+++ b/app/compra/view/view.html
@@ -1,7 +1,7 @@
 <ng-include src="'./app/menu.html'"></ng-include>
 <div class="container">
     <div class="row">
-        <h1 class="md-4">Vista de compra</h1>
+        <h1 class="md-4"><i class="fas fa-eye"></i> Vista de compra</h1>
         <table class="table table-bordered table-hover" ng-show="!fallo">
             <tr>
                 <th> Campo </th>
