--- a/app/carrito/view/carrito.html
+++ b/app/carrito/view/carrito.html
@@ -22,7 +22,7 @@
                 <p>Cantidad: {{producto.cantidad}} | Precio: {{producto.precio}}€</p>
                 <div>
                     <form class="form-group row" id="cod_tipo">
-                        <input class="col-3" type="number" value=1 ng-model="cantidad">
+                        <input class="col-3" type="number" value=1 min="0" ng-model="cantidad">
                         <button type="button" class="btn btn-primary col-4"
                             ng-click="addCarrito(producto.id,cantidad)">Añadir</button>
                         <button type="button" class="btn btn-danger col-4"
@@ -34,7 +34,10 @@
     </div>
     <br>
     <div class="row" id="cod_tipo">
-        <button type="button" class="btn btn-primary" ng-click="comprar()">Comprar</button>
+        <div>
+            <button type="button" class="btn btn-danger" ng-click="vaciarCarrito()">Vaciar</button>
+            <button type="button" class="btn btn-primary" ng-click="comprar()">Comprar</button>
+        </div>
         <h3>Total:{{total}}€</h3>
     </div>
 </div>
