--- a/app/carrito/view/carrito.html
+++ b/app/carrito/view/carrito.html
@@ -22,7 +22,7 @@
                 <p>Cantidad: {{producto.cantidad}} | Precio: {{producto.precio}}€</p>
                 <div>
                     <form class="form-group row" id="cod_tipo">
-                        <input class="col-3" type="number" value=1 ng-model="cantidad">
+                        <input class="col-3" type="number" min=1 ng-model="cantidad">
                         <button type="button" class="btn btn-primary col-4"
                             ng-click="addCarrito(producto.id,cantidad)">Añadir</button>
                         <button type="button" class="btn btn-danger col-4"
