Mitat master-Slave

--- a/app/tipo_producto/view/view.html
+++ b/app/tipo_producto/view/view.html
@@ -15,7 +15,10 @@
                 <th> Descripcion: </th>
                 <td> {{descripcion}} </td>
             </tr>
-            
+            <tr>
+                    <th> Número de productos: </th>
+                    <td><a href="#!/producto/plist/10/1/{{id}}">{{ link_producto}}</a> </td>
+                </tr>
           
         </table>
         <div class="col">
