--- a/app/tipo_usuario/view/view.html
+++ b/app/tipo_usuario/view/view.html
@@ -12,8 +12,12 @@
                 <td> {{id}} </td>
             </tr>
             <tr>
-                <th> Fecha: </th>
+                <th> Descripción: </th>
                 <td> {{descripcion}} </td>
+            </tr>
+            <tr>
+                <th> Número de usuarios: </th>
+                <td><a href="#!/usuario/plist/10/1/{{id}}">{{ link_usuario}}</a> </td>
             </tr>
             
           
